--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,11 @@
 #     for day in os.listdir(f"{year}/."):
 #             os.remove(f"{year}/{day}/input.txt")
 
+# It did not occur to me that this also ignores
+# all the notes.txt that (I think I remember having)
+# WOW, thats all gone now....
 *.txt
+
 .DS_Store
 
 # crystal
